<resources>
    <string name="app_name">InSure App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="insure_logo">Logo da Insure</string>
    <string name="personal_information_logo">Personal Information Logo</string>
    <string name="new_claim_logo">New Claim Logo </string>
    <string name="claims_information_logo">Claims Information Logo</string>
    <string name="settings_logo">Settings Logo</string>
    <string name="home_title">Welcome to InSure Mobile App</string>
    <string name="home">Home</string>
    <string name="copyright">Copyright Group 6 SISE</string>
    <string name="personal_information">Personal Information</string>
    <string name="new_claim">New Claim</string>
    <string name="claims_information">Claims Information</string>
    <string name="settings">Settings</string>
    <string name="personal_information_name">Name</string>
    <string name="personal_information_birthdate">Birthdate</string>
    <string name="personal_information_fiscalNumber">Fiscal Number</string>
    <string name="personal_information_address">Address</string>
    <string name="personal_information_insurancePolicyNumber">Insurance Policy Number</string>
    <string name="claims_list">Claims List</string>
    <string name="Assistance">Assistance</string>
    <string name="claim_title">Title</string>
    <string name="plate_number">Plate Number</string>
    <string name="claim_date">Occurrence Date</string>
    <string name="claim_description">Description</string>
    <string name="claim_id">ID</string>
    <string name="claim_state">State</string>
    <string name="claims_submission">Submission Date</string>
    <string name="select_claim">Select a claimItem for more detailed information</string>
    <string name="settings_Assistance">Assistance</string>
    <string name="settings_about_us">About Us</string>
    <string name="settings_terms_and_conditions">Terms and Conditions</string>
    <string name="settings_privacy">Privacy Policy</string>
    <string name="settings_website">Insure.com</string>
    <string name="settings_log_out">Log Out</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="back_button">Back</string>
    <string name="edit_button">Edit</string>
    <string name="Need_Assistance">Need Assistance?</string>
    <string name="Assistance_ContactUs">Contact Us!</string>
    <string name="Assistance_OurConsultants">Our Consultants:</string>
    <string name="JoaoReis">João Reis</string>
    <string name="JoaoReisMail">joaoporeis@deloitte.pt</string>
    <string name="JoseSousa">José Sousa</string>
    <string name="JoseSousaMail">josecsousa@deloitte.pt</string>
    <string name="JoseRodrigues">José Rodrigues</string>
    <string name="JoseRodriguesMail">josemrodrigues@deloitte.pt</string>
    <string name="TermsConditions">Terms and Conditions</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="WelcomeMessage">Welcome to InSure!</string>
    <string name="TermsConditionsText">These Terms and Conditions constitute a legally binding agreement made between you, whether personally or on behalf of an entity
        (“you”) and InSure (“we,” “us” or “our”), concerning your access to and use of our mobile application (the “InSure”). You agree that by accessing
        the Application, you have read, understood, and agree to be bound by all of these Terms and Conditions Use. IF YOU DO NOT AGREE WITH ALL OF THESE TERMS AND CONDITIONS,
        THEN YOU ARE EXPRESSLY PROHIBITED FROM USING THE APPLICATION AND YOU MUST DISCONTINUE USE IMMEDIATELY. </string>
    <string name="PrivacyPolicyText">InSure built the InSure app as a Commercial app. This SERVICE is provided by InSure and is intended for use as is.
        This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
        If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used
        for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy
        Policy have the same meanings as in our Terms and Conditions, which is accessible at InSure unless otherwise defined in this Privacy Policy.</string>


</resources>
