<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="190dp"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:baselineAlignBottom="false"
                android:clickable="false"
                android:contentDescription="@string/insure_logo"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/insure" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="211dp"
                android:layout_height="62dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/home_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:foregroundGravity="center_horizontal"
            android:text="@string/home"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="373dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/homePersonalInformationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/personal_information" />

            <Button
                android:id="@+id/homeNewClaimButton"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:text="@string/new_claim" />

            <Button
                android:id="@+id/homeClaimsInformationButton"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:text="@string/claims_information" />

            <Button
                android:id="@+id/homeSettingsButton"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:text="@string/settings" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="bottom|center"
            android:text="@string/copyright" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>